# agent-protocol

./: .gitignore  README.md  README_forAgentTeam.md  README_forDistributed.md  README_zh.md  Third_Party_Open_Source_Software_Notice.txt  pyproject.toml  requirements.txt
A2A-refactor/examples/: CMakeLists.txt  helloworld_server.cpp  streaming_server.cpp
A2A-refactor/src/: CMakeLists.txt
A2A-refactor/src/client/: CMakeLists.txt  client_factory.cpp  client_task_manager.cpp  client_task_manager.h  client_transport.h  default_client.cpp  default_client.h  jsonrpc_transport.cpp  jsonrpc_transport.h
A2A-refactor/src/connection/: client_conn.h
A2A-refactor/src/event/: CMakeLists.txt
A2A-refactor/src/log/: CMakeLists.txt  a2a_log.cpp
A2A-refactor/src/server/: CMakeLists.txt  default_request_handler.cpp  default_request_handler.h  http_common.cpp  http_common.h  http_server.h  http_server_builder.cpp  http_server_manager.cpp  http_server_manager.h  jsonrpc_handler.h  lock_free_queue.h  request_context_builder.h  request_context_impl.cpp  request_context_impl.h  request_handler.h  request_handler_factory_impl.h  result_aggregator.cpp  result_aggregator.h  server_call_context.h  server_impl.cpp  server_impl.h  utils_artifact.cpp  utils_artifact.h  utils_helpers.cpp  utils_helpers.h
A2A-refactor/src/shared/: CMakeLists.txt  common_types.h  errno.h  http_common.cpp  http_common.h  jsonrpc.h  uuid.cpp
A2A-refactor/src/transport/: http_server_transport.cpp  http_server_transport.h  server_transport.h  stream_server_emitter.cpp  stream_server_emitter.h  transport_emitter.h
A2A-refactor/src/utils/: CMakeLists.txt  user.h  utils_message.cpp
A2A/cpp-sdk/: .clang-format  .gitignore  CMakeLists.txt  README.md  Third_Party_Open_Source_Software_Notice.txt  build.sh
A2A/cpp-sdk/docker/: Dockerfile
A2A/cpp-sdk/docs/: API.md  LOGGING.md  TESTING.md  dependencies.md  errors.md  logging.md  testing.md
A2A/cpp-sdk/examples/: CMakeLists.txt  helloworld_client.cpp  helloworld_server.cpp  streaming_client.cpp  streaming_server.cpp
A2A/cpp-sdk/include/: a2a_log.h  error.h  types.h
A2A/cpp-sdk/scripts/: build.sh  install_deps.sh  run_example.sh  run_ut.sh
A2A/cpp-sdk/src/: CMakeLists.txt
A2A/cpp-sdk/tests/: CMakeLists.txt
A4P/: .gitignore  A4P_SDK_DESIGN.md  INTENT_MANDATE_DESIGN.md  README.md  pyproject.toml
A4P/examples/note_mcp_a4p/: README.md  agent_simulator.py  note_mcp_server.py  run_authorization_server.py  smoke_test.py
A4P/src/a4p/: __init__.py  client.py  http_server.py  intent_mandate.py  operation_mandate.py  security.py  server.py  types.py  user_authorizer.py
A4P/tests/: test_security_and_http.py
ACP/: README.md  README.zh-CN.md  acp_sdk_hierarchical_demo.py  pyproject.toml
ACP/sdk_core/: __init__.py  builders.py  client.py  evaluator.py  models.py  utils.py
AgentRegistry/: README.md  README_forAgentTeam.md  README_forDistributed.md  pyproject.toml
AgentRegistry/a2x_registry/: __init__.py  llm_apikey.example.json
AgentRegistry/a2x_registry/a2x/: VERSION.md  __init__.py
AgentRegistry/a2x_registry/auth/: __init__.py  cli.py  deps.py  models.py
AgentRegistry/a2x_registry/backend/: __main__.py  app.py  default_queries.py  startup.py
AgentRegistry/a2x_registry/cluster/: __init__.py  auth_handshake.py  cli.py  config.py  deps.py  envelope.py  membership.py  peer.py  state.py  store.py  sweepers.py  transport.py
AgentRegistry/a2x_registry/common/: atomic.py  auth_context.py  db.py  evaluation.py  feature_flags.py  ids.py  lease.py  models.py  naming.py  paths.py
AgentRegistry/a2x_registry/heartbeat/: __init__.py  deps.py  errors.py  models.py  router.py  service.py  store.py  sweeper.py  system_ctx.py
AgentRegistry/a2x_registry/image/: __init__.py  deps.py  errors.py  models.py  router.py  service.py  version_key.py
AgentRegistry/a2x_registry/instance/: __init__.py  deps.py  errors.py  models.py  router.py  service.py
AgentRegistry/a2x_registry/register/: __init__.py  __main__.py  agent_card.py  errors.py  models.py  service.py  user_config.example.json  validation.py
AgentRegistry/a2x_registry/traditional/: __init__.py
AgentRegistry/a2x_registry/vector/: __init__.py
AgentRegistry/client/: LICENSE  README.md  README_agentteam.md  pyproject.toml
AgentRegistry/client/a2x_registry_client/: __init__.py  auth.py  cli.py  client.py  errors.py  heartbeat.py  models.py  ownership.py  transport.py
AgentRegistry/client/tests/: test_cli_token_io.py  test_error_mapping.py  (+3 more)
AgentRegistry/docs/: cluster_design.md  frontend_design.md  heartbeat_design.md  incremental_design.md
AgentRegistry/tests/: conftest.py  start_rqlite_cluster.sh
AgentRegistry/ui/: launcher.py
MCP/cpp-sdk/: .gitignore  CMakeLists.txt  README.md  build.sh  cmake_uninstall.cmake.in
intelli_router/: API.md  README.md  __init__.py  demo_adaptive_strategy.py  pyproject.toml
intelli_router/cache/: local_cache.py
intelli_router/core/: context.py
intelli_router/examples/: demo_e2e.py  demo_prometheus.py  demo_web_dashboard.py
intelli_router/health/: checker.py
intelli_router/intelli_router/: __init__.py  types.py
intelli_router/strategy/: __init__.py  adaptive.py  simple_shuffle.py
intelli_router/tests/: __init__.py  conftest.py  test_cache_local_cache.py  test_core_context.py  test_core_deployment.py  test_core_state.py  test_health_checker.py  test_media_utils.py  test_observability_bus.py  test_observability_events.py  test_observability_integration.py  test_observability_logging_hook.py  test_observability_metrics.py  test_observability_web_dashboard.py  test_parsers.py  test_provider_adapters.py  test_public_api.py  test_reliable_router.py  test_router_base_router.py  test_router_reliable_router.py  test_router_system.py  test_strategy_base_strategy.py  test_strategy_implementations.py  test_utils_exceptions.py
intelli_router/utils/: exceptions.py
mcp-auth-ext/: README.md  pyproject.toml
mcp-auth-ext/examples/: apikey_client.py  apikey_server.py
mcp-auth-ext/tests/: __init__.py  test_discovery.py  test_metadata.py  test_server.py
(+671 files in other folders)
