[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "a4p"
version = "0.1.0"
description = "A lightweight Python SDK for A4P authorization mandates and tokens."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Agent Protocol Contributors" },
]
keywords = ["agent", "authorization", "a4p", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/a4p"]

[tool.pytest.ini_options]
pythonpath = ["src"]
