[project]
name = "mcp-auth-ext"
version = "0.1.0"
description = "Extended authorization for MCP: multiple schemes via protected resource metadata"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "starlette>=0.27",
]

[tool.uv.sources]
# Use MCP Python SDK v1.x from GitHub
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git", branch = "v1.x" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth_ext"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["I", "E", "F", "N", "UP", "B", "C4"]
ignore = []

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
